--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
   },
   "homepage": "https://github.com/anvlkv/intervey-api#readme",
   "dependencies": {
-    "@types/koa-router": "^7.0.23",
     "co-body": "^5.1.1",
     "http": "0.0.0",
     "koa": "^2.3.0",
     "koa-mongo": "^1.2.1",
     "koa-router": "^7.2.1",
     "mongodb": "^2.2.31",
+    "mongoose": "^4.12.0",
     "nodemon": "^1.12.1"
   },
   "devDependencies": {
     "@types/koa": "^2.0.39",
+    "@types/koa-router": "^7.0.23",
+    "@types/mongodb": "^2.2.12",
+    "@types/mongoose": "^4.7.23",
     "@types/node": "^8.0.28",
     "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
