--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/anvlkv/intervey-api#readme",
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "co-body": "^5.1.1",
     "http": "0.0.0",
     "koa": "^2.3.0",
