--- a/package.json
+++ b/package.json
@@ -1,60 +1,65 @@
 {
-  "name": "intervey-api",
-  "version": "1.0.0",
-  "description": "api for intervey",
-  "main": "lib/index",
-  "types": "lib/index",
-  "scripts": {
-    "test": "test",
-    "start": "npm run build:live",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- $NODE_DEBUG_OPTION ./src/server/main.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/anvlkv/intervey-api.git"
-  },
-  "keywords": [
-    "intervey"
-  ],
-  "author": "Aleksandr Novolokov",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/anvlkv/intervey-api/issues"
-  },
-  "homepage": "https://github.com/anvlkv/intervey-api#readme",
-  "dependencies": {
-    "co-body": "^5.1.1",
-    "http": "0.0.0",
-    "koa": "^2.3.0",
-    "koa-body": "^2.5.0",
-    "koa-helmet": "^3.2.0",
-    "koa-mongo": "^1.2.1",
-    "koa-mongoose": "git+ssh://git@github.com/anvlkv/koa-mongoose.git",
-    "koa-router": "^7.2.1",
-    "mongodb": "^2.2.33",
-    "mongoose": "^4.12.4",
-    "nodemon": "^1.12.1"
-  },
-  "devDependencies": {
-    "@koa/cors": "^2.2.1",
-    "@types/jasmine": "2.5.38",
-    "@types/json-patch": "0.0.30",
-    "@types/koa": "^2.0.39",
-    "@types/koa-router": "^7.0.23",
-    "@types/mongodb": "^2.2.15",
-    "@types/mongoose": "^4.7.24",
-    "@types/node": "^8.0.47",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.0",
-    "typescript-ioc": "^1.0.2"
-  }
+   "name": "intervey-api",
+   "version": "1.0.0",
+   "description": "api for intervey",
+   "main": "lib/index",
+   "types": "lib/index",
+   "scripts": {
+      "test": "test",
+      "start": "ts-node src/server/main.ts",
+      "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- $NODE_DEBUG_OPTION ./src/server/main.ts",
+      "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\""
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+ssh://git@github.com/anvlkv/intervey-api.git"
+   },
+   "keywords": [
+      "intervey"
+   ],
+   "author": "Aleksandr Novolokov",
+   "license": "MIT",
+   "bugs": {
+      "url": "https://github.com/anvlkv/intervey-api/issues"
+   },
+   "homepage": "https://github.com/anvlkv/intervey-api#readme",
+   "dependencies": {
+      "co-body": "^5.1.1",
+      "http": "0.0.0",
+      "koa": "^2.3.0",
+      "koa-body": "^2.5.0",
+      "koa-helmet": "^3.2.0",
+      "koa-mongo": "^1.2.1",
+      "koa-mongoose": "git+ssh://git@github.com/anvlkv/koa-mongoose.git",
+      "koa-router": "^7.2.1",
+      "mongodb": "^2.2.31",
+      "mongoose": "^4.12.4",
+      "mysql": "^2.15.0",
+      "nodemon": "^1.12.1",
+      "pg": "^7.4.0",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.1.2"
+   },
+   "devDependencies": {
+      "@koa/cors": "^2.2.1",
+      "@types/jasmine": "2.5.38",
+      "@types/json-patch": "0.0.30",
+      "@types/koa": "^2.0.39",
+      "@types/koa-router": "^7.0.23",
+      "@types/mongodb": "^2.2.15",
+      "@types/mongoose": "^4.7.24",
+      "@types/node": "^8.0.29",
+      "jasmine-core": "~2.5.2",
+      "jasmine-spec-reporter": "~3.2.0",
+      "karma": "~1.4.1",
+      "karma-chrome-launcher": "~2.0.0",
+      "karma-cli": "~1.0.1",
+      "karma-coverage-istanbul-reporter": "^0.2.0",
+      "karma-jasmine": "~1.1.0",
+      "karma-jasmine-html-reporter": "^0.2.2",
+      "ts-node": "3.3.0",
+      "tslint": "^5.8.0",
+      "typescript": "2.5.2",
+      "typescript-ioc": "^1.0.2"
+   }
 }
