--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,7 +6,8 @@
    "password": "another**Pa55w0rd!",
    "database": "interveydev",
    "synchronize": true,
-   "logging": false,
+   "logging": true,
+   "logger": "file",
    "entities": [
       "src/entity/**/*.ts"
    ],
