--- a/package.json
+++ b/package.json
@@ -31,27 +31,27 @@
       "koa-helmet": "^3.3.0",
       "koa-router": "^7.3.0",
       "mongodb": "^2.2.31",
-      "mongoose": "^4.13.5",
+      "mongoose": "^4.13.7",
       "mysql": "^2.15.0",
-      "nodemon": "^1.12.1",
+      "nodemon": "^1.14.3",
       "pg": "^7.4.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "^0.2.0-alpha.7"
+      "typeorm": "^0.2.0-alpha.13"
    },
    "devDependencies": {
       "@koa/cors": "^2.2.1",
       "@types/jasmine": "2.5.38",
       "@types/json-patch": "0.0.30",
-      "@types/koa": "^2.0.41",
-      "@types/koa-router": "^7.0.26",
-      "@types/node": "^8.0.53",
+      "@types/koa": "^2.0.43",
+      "@types/koa-router": "^7.0.27",
+      "@types/node": "^8.5.2",
       "jasmine-core": "~2.5.2",
       "jasmine-spec-reporter": "~3.2.0",
       "karma": "~1.4.1",
       "karma-chrome-launcher": "~2.0.0",
       "karma-cli": "~1.0.1",
       "karma-coverage-istanbul-reporter": "^0.2.0",
-      "karma-jasmine": "~1.1.0",
+      "karma-jasmine": "^1.1.1",
       "karma-jasmine-html-reporter": "^0.2.2",
       "ts-node": "3.3.0",
       "tslint": "^5.8.0",
