--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "test": "test",
       "start": "ts-node src/server/main.ts",
       "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- $NODE_DEBUG_OPTION ./src/server/main.ts",
-      "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\"; rm ormlogs.log"
+      "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\""
    },
    "repository": {
       "type": "git",
@@ -31,9 +31,9 @@
       "koa-helmet": "^3.3.0",
       "koa-router": "^7.3.0",
       "mongodb": "^2.2.31",
-      "mongoose": "^4.13.7",
+      "mongoose": "^4.13.8",
       "mysql": "^2.15.0",
-      "nodemon": "^1.14.3",
+      "nodemon": "^1.14.7",
       "pg": "^7.4.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "^0.2.0-alpha.13"
@@ -45,6 +45,7 @@
       "@types/koa": "^2.0.43",
       "@types/koa-router": "^7.0.27",
       "@types/node": "^8.5.2",
+      "debug": "^3.1.0",
       "jasmine-core": "~2.5.2",
       "jasmine-spec-reporter": "~3.2.0",
       "karma": "~1.4.1",
@@ -55,7 +56,7 @@
       "karma-jasmine-html-reporter": "^0.2.2",
       "ts-node": "3.3.0",
       "tslint": "^5.8.0",
-      "typescript": "2.5.2",
+      "typescript": "^2.5.2",
       "typescript-ioc": "^1.0.2"
    }
 }
