serving sequence steps

--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
       "http": "0.0.0",
       "koa": "^2.4.1",
       "koa-body": "^2.5.0",
+      "koa-cookie": "^1.0.0",
       "koa-helmet": "^3.3.0",
       "koa-router": "^7.3.0",
+      "koa-send": "^4.1.2",
+      "koa-session": "^5.5.1",
+      "koa-session-async": "0.0.2",
+      "koa-static": "^4.0.2",
       "mongodb": "^2.2.31",
       "mongoose": "^4.13.8",
       "mysql": "^2.15.0",
@@ -44,6 +49,9 @@
       "@types/json-patch": "0.0.30",
       "@types/koa": "^2.0.43",
       "@types/koa-router": "^7.0.27",
+      "@types/koa-send": "^4.1.1",
+      "@types/koa-session": "^3.0.6",
+      "@types/koa-static": "^4.0.0",
       "@types/node": "^8.5.2",
       "debug": "^3.1.0",
       "jasmine-core": "~2.5.2",
