--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
    "name": "intervey-api",
    "version": "1.0.0",
    "description": "api for intervey",
-   "main": "lib/index",
-   "types": "lib/index",
+   "main": "build/server/main.js",
+   "types": "lib/types",
    "scripts": {
       "test": "test",
-      "start": "ts-node src/server/main.ts",
-      "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- $NODE_DEBUG_OPTION ./src/server/main.ts",
-      "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\""
+      "start": "concurrently \"npm run generate-barrels\" \"ts-node src/server/main.ts\" \"tsc\" ",
+      "build": "tsc --verbose",
+      "build:live": "nodemon --config nodemon.json",
+      "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\"",
+      "generate-barrels": "barrelsby --delete -c barrelconfig.json"
    },
    "repository": {
       "type": "git",
@@ -25,33 +27,41 @@
    "homepage": "https://github.com/anvlkv/intervey-api#readme",
    "dependencies": {
       "co-body": "^5.1.1",
+      "fast-json-patch": "^2.0.6",
+      "fs": "0.0.1-security",
       "http": "0.0.0",
       "koa": "^2.5.0",
       "koa-body": "^2.5.0",
+      "koa-convert": "^1.2.0",
       "koa-cookie": "^1.0.0",
       "koa-helmet": "^3.3.0",
       "koa-router": "^7.4.0",
+      "koa-router2": "^1.2.1",
       "koa-send": "^4.1.3",
       "koa-session": "^5.8.1",
       "koa-session-async": "0.0.2",
       "koa-static": "^4.0.2",
+      "koa2-cors": "^2.0.5",
       "mongodb": "^2.2.35",
       "mongoose": "^4.13.12",
       "mysql": "^2.15.0",
-      "nodemon": "^1.17.2",
+      "nodemon": "^1.17.3",
       "pg": "^7.4.1",
-      "typeorm": "^0.2.0-alpha.38"
+      "pluralize": "^7.0.0",
+      "typeorm": "^0.2.0"
    },
    "devDependencies": {
-      "@koa/cors": "^2.2.1",
       "@types/jasmine": "2.5.38",
       "@types/json-patch": "0.0.30",
-      "@types/koa": "^2.0.44",
+      "@types/koa": "^2.0.45",
       "@types/koa-router": "^7.0.27",
       "@types/koa-send": "^4.1.1",
       "@types/koa-session": "^3.0.6",
       "@types/koa-static": "^4.0.0",
-      "@types/node": "^8.10.0",
+      "@types/node": "^8.10.9",
+      "@types/pluralize": "0.0.28",
+      "barrelsby": "0.0.8",
+      "concurrently": "^3.5.1",
       "debug": "^3.1.0",
       "jasmine-core": "~2.5.2",
       "jasmine-spec-reporter": "~3.2.0",
@@ -61,9 +71,9 @@
       "karma-coverage-istanbul-reporter": "^0.2.0",
       "karma-jasmine": "^1.1.1",
       "karma-jasmine-html-reporter": "^0.2.2",
-      "ts-node": "3.3.0",
+      "ts-node": "^6.0.0",
       "tslint": "^5.9.1",
-      "typescript": "^2.7.2",
-      "typescript-ioc": "^1.1.1"
+      "typescript": "2.7.2",
+      "typescript-ioc": "^1.2.3"
    }
 }
