--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
-   }
+      "sourceMap": true,
+      "declaration": true,
+      "declarationDir": "lib/types"
+   },
+   "exclude": [
+      "lib"
+   ]
 }
