--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
    "types": "lib/types",
    "scripts": {
       "test": "test",
-      "start": "concurrently \"npm run generate-barrels\" \"ts-node src/server/main.ts\" \"tsc\" ",
+      "start": "npm run generate-barrels && tsc && ts-node $NODE_DEBUG_OPTION src/server/main.ts",
       "build": "tsc --verbose",
       "build:watch": "nodemon --config nodemon.json",
       "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\"",
-      "generate-barrels": "barrelsby --delete -c barrelconfig.json"
+      "generate-barrels": "barrelsby --delete -c barrelconfig.json",
+      "booom": "killall node"
    },
    "repository": {
       "type": "git",
@@ -26,12 +27,12 @@
    },
    "homepage": "https://github.com/anvlkv/intervey-api#readme",
    "dependencies": {
-      "co-body": "^5.1.1",
+      "co-body": "^5.2.0",
       "fast-json-patch": "^2.0.6",
       "fs": "0.0.1-security",
       "http": "0.0.0",
-      "koa": "^2.5.0",
-      "koa-body": "^2.5.0",
+      "koa": "^2.5.1",
+      "koa-body": "^2.6.0",
       "koa-convert": "^1.2.0",
       "koa-cookie": "^1.0.0",
       "koa-helmet": "^3.3.0",
@@ -40,25 +41,26 @@
       "koa-send": "^4.1.3",
       "koa-session": "^5.8.1",
       "koa-session-async": "0.0.2",
-      "koa-static": "^4.0.2",
+      "koa-static": "^4.0.3",
       "koa2-cors": "^2.0.5",
       "mongodb": "^2.2.35",
-      "mongoose": "^4.13.12",
+      "mongoose": "^4.13.14",
       "mysql": "^2.15.0",
-      "nodemon": "^1.17.3",
-      "pg": "^7.4.1",
+      "nodemon": "^1.17.5",
+      "pg": "^7.4.3",
       "pluralize": "^7.0.0",
-      "typeorm": "^0.2.0"
+      "typeorm": "^0.2.6"
    },
    "devDependencies": {
       "@types/jasmine": "2.5.38",
       "@types/json-patch": "0.0.30",
       "@types/koa": "^2.0.45",
-      "@types/koa-router": "^7.0.27",
+      "@types/koa-router": "^7.0.28",
       "@types/koa-send": "^4.1.1",
       "@types/koa-session": "^3.0.6",
       "@types/koa-static": "^4.0.0",
-      "@types/node": "^8.10.9",
+      "@types/koa2-cors": "^2.0.1",
+      "@types/node": "^8.10.17",
       "@types/pluralize": "0.0.28",
       "barrelsby": "0.0.8",
       "concurrently": "^3.5.1",
@@ -69,10 +71,10 @@
       "karma-chrome-launcher": "~2.0.0",
       "karma-cli": "~1.0.1",
       "karma-coverage-istanbul-reporter": "^0.2.0",
-      "karma-jasmine": "^1.1.1",
+      "karma-jasmine": "^1.1.2",
       "karma-jasmine-html-reporter": "^0.2.2",
-      "ts-node": "^6.0.0",
-      "tslint": "^5.9.1",
+      "ts-node": "^6.0.5",
+      "tslint": "^5.10.0",
       "typescript": "2.7.2",
       "typescript-ioc": "^1.2.3"
    }
