--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
    },
    "homepage": "https://github.com/anvlkv/absqra-server#readme",
    "dependencies": {
+      "@koa/cors": "^2.2.2",
       "co-body": "^5.2.0",
-      "fast-json-patch": "^2.0.6",
+      "fast-json-patch": "^2.0.7",
       "fs": "0.0.1-security",
       "http": "0.0.0",
       "koa": "^2.5.2",
@@ -38,16 +39,12 @@
       "koa-cookie": "^1.0.0",
       "koa-helmet": "^3.3.0",
       "koa-router": "^7.4.0",
-      "koa-router2": "^1.2.1",
+      "koa-router2": "^1.3.1",
       "koa-send": "^4.1.3",
-      "koa-session": "^5.8.2",
+      "koa-session": "^5.9.0",
       "koa-session-async": "0.0.2",
       "koa-static": "^4.0.3",
-      "koa2-cors": "^2.0.5",
-      "mongodb": "^2.2.35",
-      "mongoose": "^4.13.14",
-      "mysql": "^2.15.0",
-      "nodemon": "^1.18.1",
+      "nodemon": "^1.18.4",
       "pg": "^7.4.3",
       "pluralize": "^7.0.0",
       "typeorm": "^0.2.7"
@@ -56,26 +53,27 @@
       "@types/jasmine": "2.5.38",
       "@types/json-patch": "0.0.30",
       "@types/koa": "^2.0.46",
-      "@types/koa-router": "^7.0.30",
+      "@types/koa-router": "^7.0.31",
       "@types/koa-send": "^4.1.1",
       "@types/koa-session": "^3.0.6",
       "@types/koa-static": "^4.0.0",
       "@types/koa2-cors": "^2.0.1",
-      "@types/node": "^8.10.21",
+      "@types/node": "^8.10.29",
       "@types/pluralize": "0.0.28",
       "barrelsby": "0.0.8",
-      "concurrently": "^3.6.0",
+      "better-console": "^1.0.1",
+      "concurrently": "^3.6.1",
       "debug": "^3.1.0",
       "jasmine-core": "~2.5.2",
       "jasmine-spec-reporter": "~3.2.0",
-      "karma": "^2.0.4",
+      "karma": "^3.0.0",
       "karma-chrome-launcher": "~2.0.0",
       "karma-cli": "~1.0.1",
       "karma-coverage-istanbul-reporter": "^0.2.0",
       "karma-jasmine": "^1.1.2",
       "karma-jasmine-html-reporter": "^0.2.2",
-      "ts-node": "^6.2.0",
-      "tslint": "^5.10.0",
+      "ts-node": "^7.0.1",
+      "tslint": "^5.11.0",
       "typescript": "2.7.2",
       "typescript-ioc": "^1.2.4"
    }
