--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
       "koa-session": "^5.9.0",
       "koa-session-async": "0.0.2",
       "koa-static": "^4.0.3",
+      "koa-websocket": "^5.0.1",
       "nodemon": "^1.18.4",
       "pg": "^7.4.3",
       "pluralize": "^7.0.0",
+      "rxjs": "^6.3.2",
       "typeorm": "^0.2.7"
    },
    "devDependencies": {
@@ -57,13 +59,14 @@
       "@types/koa-send": "^4.1.1",
       "@types/koa-session": "^3.0.6",
       "@types/koa-static": "^4.0.0",
+      "@types/koa-websocket": "^5.0.2",
       "@types/koa2-cors": "^2.0.1",
       "@types/node": "^8.10.29",
       "@types/pluralize": "0.0.28",
       "barrelsby": "0.0.8",
       "better-console": "^1.0.1",
       "concurrently": "^3.6.1",
-      "debug": "^3.1.0",
+      "debug": "^3.2.5",
       "jasmine-core": "~2.5.2",
       "jasmine-spec-reporter": "~3.2.0",
       "karma": "^3.0.0",
