refactor, user rules

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "types": "lib/types",
    "scripts": {
       "test": "test",
-      "start": "npm run generate-barrels && tsc && ts-node $NODE_DEBUG_OPTION src/server/main.ts",
+      "start": "npm run generate-barrels && rm -rf lib/types && tsc && ts-node $NODE_DEBUG_OPTION src/server/main.ts",
       "build": "tsc --verbose",
       "build:watch": "nodemon --config nodemon.json",
       "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\"",
@@ -33,7 +33,7 @@
       "fast-json-patch": "^2.0.7",
       "fs": "0.0.1-security",
       "http": "0.0.0",
-      "koa": "^2.5.2",
+      "koa": "^2.5.3",
       "koa-body": "^2.6.0",
       "koa-convert": "^1.2.0",
       "koa-cookie": "^1.0.0",
@@ -45,6 +45,7 @@
       "koa-session-async": "0.0.2",
       "koa-static": "^4.0.3",
       "koa-websocket": "^5.0.1",
+      "node-rules": "^4.0.2",
       "nodemon": "^1.18.4",
       "pg": "^7.4.3",
       "pluralize": "^7.0.0",
@@ -55,13 +56,13 @@
       "@types/jasmine": "2.5.38",
       "@types/json-patch": "0.0.30",
       "@types/koa": "^2.0.46",
-      "@types/koa-router": "^7.0.31",
+      "@types/koa-router": "^7.0.32",
       "@types/koa-send": "^4.1.1",
       "@types/koa-session": "^3.0.6",
       "@types/koa-static": "^4.0.0",
       "@types/koa-websocket": "^5.0.2",
       "@types/koa2-cors": "^2.0.1",
-      "@types/node": "^8.10.29",
+      "@types/node": "^8.10.30",
       "@types/pluralize": "0.0.28",
       "barrelsby": "0.0.8",
       "better-console": "^1.0.1",
