--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
    "scripts": {
       "test": "jest",
       "start": "npm run generate-barrels && rm -rf lib/types && tsc && ts-node $NODE_DEBUG_OPTION src/main.ts",
-      "build": "tsc --verbose",
+      "build": "tsc",
       "build:watch": "nodemon --config nodemon.json",
       "restart:db": "psql -f sqlScripts/restart.sql -v datname=\"interveydev\" -v username=\"interveyapi\" -v datnameQ=\"'interveyapi'\"",
       "generate-barrels": "barrelsby --delete -c barrelconfig.json",
@@ -35,7 +35,7 @@
       "fast-json-patch": "^2.0.7",
       "fs": "0.0.1-security",
       "http": "0.0.0",
-      "koa": "^2.5.3",
+      "koa": "^2.6.1",
       "koa-body": "^2.6.0",
       "koa-convert": "^1.2.0",
       "koa-cookie": "^1.0.0",
@@ -48,28 +48,28 @@
       "koa-static": "^4.0.3",
       "koa-websocket": "^5.0.1",
       "node-rules": "^4.0.2",
-      "nodemon": "^1.18.4",
-      "pg": "^7.4.3",
+      "nodemon": "^1.18.5",
+      "pg": "^7.6.0",
       "pluralize": "^7.0.0",
-      "rxjs": "^6.3.2",
-      "typeorm": "^0.2.7"
+      "rxjs": "^6.3.3",
+      "typeorm": "^0.2.8"
    },
    "devDependencies": {
-      "@types/jest": "^23.3.5",
+      "@types/jest": "^23.3.7",
       "@types/json-patch": "0.0.30",
       "@types/koa": "^2.0.46",
       "@types/koa-router": "^7.0.32",
       "@types/koa-send": "^4.1.1",
       "@types/koa-session": "^3.0.6",
       "@types/koa-static": "^4.0.0",
-      "@types/koa-websocket": "^5.0.2",
+      "@types/koa-websocket": "^5.0.3",
       "@types/koa2-cors": "^2.0.1",
-      "@types/node": "^8.10.30",
+      "@types/node": "^8.10.36",
       "@types/pluralize": "0.0.28",
       "barrelsby": "0.0.8",
       "better-console": "^1.0.1",
       "concurrently": "^3.6.1",
-      "debug": "^3.2.5",
+      "debug": "^3.2.6",
       "jest": "^23.6.0",
       "ts-node": "^7.0.1",
       "tslint": "^5.11.0",
